package org.isp.good;

/**
 * @author zhangming
 */
public interface IGoodBodyGirl {
    void goodLooking();

    void niceFigure();

}
