package org.isp.good;

/**
 * @author zhangming
 */
public interface IGreatTemperamentGirl {

    void greatTemperament();
}
